fix(ui/input): fix input overflow

--- a/packages/varlet-ui/src/input/input.less
+++ b/packages/varlet-ui/src/input/input.less
@@ -29,6 +29,7 @@
 .var-input {
   width: 100%;
   color: var(--input-input-text-color);
+  overflow: hidden;
 
   &__controller {
     width: 100%;
